--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "avtomon/_PDO",
     "description": "Yet another PHP PDO wrapper",
     "type": "project",
-    "minimum-stability": "dev",
+    "minimum-stability": "master",
     "config": {
 	"process-timeout": 1800
     }
